# FIAP

./: .gitignore  fine_tuning.ipynb  pyproject.toml  sync_project.sh  tech_challenge3_v2.ipynb  tech_challenge3_v3.ipynb  tech_challenge_fase3.ipynb
tech_challenge3/: .env  .gitignore  fine_tuning.ipynb  fine_tuning_v2.ipynb  fine_tuning_v3.ipynb  main.py  pyproject.toml  tech_challenge3.ipynb
tech_challenge3/t5-finetuned/: adapter_model.safetensors
tech_challenge3/t5-finetuned_v2/: adapter_model.safetensors
tech_challenge3/t5-small-finetuned/checkpoint-1000/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
tech_challenge3/t5-small-finetuned/checkpoint-1500/: adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
tech_challenge3/t5-small-finetuned/checkpoint-1875/: optimizer.pt  scheduler.pt  trainer_state.json
tech_challenge3/t5-small-finetuned/checkpoint-500/: adapter_config.json  adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
