[project]
name = "tech-challenge3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.0",
    "chromadb>=0.6.3",
    "datasets>=3.3.2",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-huggingface>=0.1.2",
    "nest-asyncio>=1.6.0",
    "polars>=1.24.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uuid>=1.30",
]
