[project]
name = "tech-challenge3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "ipywidgets>=8.1.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
